codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__tests__active_call_snapshot.snap
---
source: tui/src/history_cell/mcp.rs
assertion_line: 636
expression: rendered
---
• Calling search.find_docs({"query":"ratatui styling","limit":3})
