codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__tests__completed_call_error_snapshot.snap
---
source: tui/src/history_cell/mcp.rs
assertion_line: 689
expression: rendered
---
• Called search.find_docs({"query":"ratatui styling","limit":3})
  └ Error: network timeout
