codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__tests__completed_call_multiple_outputs_inline_snapshot.snap
---
source: tui/src/history_cell/mcp.rs
assertion_line: 805
expression: rendered
---
• Called metrics.summary({"metric":"trace.latency","window":"15m"})
  └ Latency summary: p50=120ms, p95=480ms.
    No anomalies detected.
