codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__tests__mcp_inventory_older_app_server_authentication.snap
---
source: tui/src/history_cell/mcp_tests.rs
expression: rendered
---
/mcp

🔌  MCP Tools

  • legacy-auth: authentication required (0 tools)
  • legacy-healthy: unknown (1 tool)
  • runtime-disabled: disabled (0 tools)

  Use /mcp verbose for tools and resources.
