codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__tests__mcp_preview_shares_one_limit_across_blocks_and_preserves_transcript.snap
---
source: tui/src/history_cell/mcp_tests.rs
expression: "format!(\"compact:\\n{}\\n\\nhistory:\\n{}\\n\\ntranscript:\\n{}\",\nvisible_lines(cell.compact_hyperlink_lines(80)).iter().map(ToString::to_string).collect::<Vec<_>>().join(\"\\n\"),\ndisplay.iter().map(ToString::to_string).collect::<Vec<_>>().join(\"\\n\"),\ntranscript.iter().map(ToString::to_string).collect::<Vec<_>>().join(\"\\n\"),)"
---
compact:
• Called search.lookup
  └ third
    fourth
    fifth

history:
• Called search.lookup({"title":"Search query"})
  └ first
    second
    third
    +2 lines (⌃t to view transcript)

transcript:
• Called search.lookup({"title":"Search query"})
  └ first
    second
    third
    fourth
    fifth
