codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__mcp__tests__titled_image_call_keeps_error_and_full_title_when_narrow.snap
---
source: tui/src/history_cell/mcp_tests.rs
expression: "lines.iter().map(ToString::to_string).collect::<Vec<_>>().join(\"\\n\")"
---
• Inspect a very long screensho…
  └ Screenshot partially failed
    Returned image
